--- a/cards.css
+++ b/cards.css
@@ -12,6 +12,7 @@
         box-shadow: 2px 2px 20px black;
         border-radius: 5px; 
         margin: 2%;
+        background-color: aliceblue;
        }
    
    .image img{
